--- a/sign.html
+++ b/sign.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sign</title>
 </head>
-<body>
+<body id="body">
     <center>
         <div class="one">
-        <h1>sign</h1>
-        number : <input type="number" placeholder="enter your number"><br>
-        password : <input type="password" placeholder="Enter your password"><br>
+        <h1 id="sign">sign</h1>
+        <input type="number" placeholder="enter your number"><br>
+        <input type="password" placeholder="Enter your password"><br>
         <button id="two" onclick="gohome()">sign</button><br>
         </div>
     </center>
@@ -25,14 +25,24 @@
 
 <style>
 .one{
-    border: solid;color: blue;border-style: double;
+    border: solid;color: gray;border-style: double;
     width: 50%;
-    background-color: coral;
+    background-color: gray;
     font-style: italic;
 }
 
 #two{
-    color: palevioletred;
+    color: white;
     background-color: black;
+    height: 40px;
+    width: 80px;
+}
+
+#body{
+    background-color: black;
+}
+
+#sign{
+    color: white;
 }
 </style>
