added new files

--- a/cart.html
+++ b/cart.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>cart</title>
 </head>
 <body id="body">
     <div>
         <section>
             <h2 id="cart">Your cart</h2>
+            <div>
+        <section>
+            <button id="shop" onclick="gotoshop()">go to shop</button>
+        </section>
+    </div>
         </section>
     </div>
     <div>
@@ -25,12 +30,12 @@
         color: white;
     }
     #body{
-        background-color: palevioletred;
+        background-color: gray;
     }
 
     #shop{
         background-color: black;
-        color: palevioletred;
+        color: gray;
     }
 
 </style>
