create button modified

--- a/createaccont.html
+++ b/createaccont.html
@@ -22,7 +22,7 @@
         <br>
         <br>
         
-        <button>create</button>
+        <button onclick="create()">create</button>
     </center>
     
 </body>
@@ -45,3 +45,9 @@
         color: white;
     }
 </style>
+
+<script>
+    function create(){
+        window.location.href="intex.html"
+    }
+</script>
