modified home page

--- a/intex.html
+++ b/intex.html
@@ -13,13 +13,7 @@
         <nav>
         <p class="navbar"><a href="login.html">login</a></p>
         <p class="navbar"><a href="cart.html">cart</a></p>
-        <p class="navbar"><a href="create account">create account</a></p>
-       catageries <select>
-            <option><p><a href="fashion.html">fashion</a></p></option>
-        </select>
-            
-
-            
+        <p class="navbar"><a href="createaccont.html">create account</a></p>      
     </nav>  
     <div>
     </div>
