--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
     <input class="zx" type="number" placeholder="Enter your number"><br>
     <input class="zx" type="text" placeholder="Enter your email"><br>
     <button class="zx" onclick="gohome()">login</button><br>
-    <button onclick="sign()">sign in</button>
+    <button id="sign" onclick="sign()">sign in</button>
     </section>
     </div>
 </center>
@@ -44,6 +44,9 @@
     #cc{
      padding: 8%;
     }
-
+#sign{
+    border-radius: 30px;
+    border: none;
+}
 
 </style>
