--- a/cart.html
+++ b/cart.html
@@ -16,11 +16,6 @@
     </div>
         </section>
     </div>
-    <div>
-        <section>
-            <button id="shop" onclick="gotoshop()">go to shop</button>
-        </section>
-    </div>
 </body>
 </html>
 
@@ -34,8 +29,10 @@
     }
 
     #shop{
-        background-color: black;
-        color: gray;
+        background-color: white;
+        color: black;
+        border-radius: 30px;
+        width: 10%;
     }
 
 </style>
