sign page changed

--- a/sign.html
+++ b/sign.html
@@ -9,9 +9,15 @@
     <center>
         <div class="one">
         <h1 id="sign">sign</h1>
-        <input class="t" type="number" placeholder="enter your number"><br>
-        <input class="t" type="password" placeholder="Enter your password"><br>
-        <button id="two" onclick="gohome()">sign</button><br>
+        <input class="t" type="number" placeholder="enter your number">
+        <br>
+        <br>
+        <input class="t" type="password" placeholder="Enter your password">
+        <br>
+        <br>
+        <button id="two" onclick="gohome()">sign</button>
+        <br>
+        <br>
         </div>
     </center>
 </body>
@@ -36,9 +42,9 @@
     color: white;
     background-color: black;
     height: 20px;
-    width: 80px;
+    width: 25%;
     border-radius: 30px;
-    padding: 10px;
+    padding: 5%;
 }
 
 #body{
@@ -52,8 +58,9 @@
 
 .t{
     height: 10px;
-    width: 50%;
+    width: 65%;
     padding: 2%;
+    border-radius: 30px;
     
 }
 </style>
