intex page and style modified

--- a/intex.html
+++ b/intex.html
@@ -21,7 +21,19 @@
         <center>
         <input id="search" type="search" placeholder="search">
         </center>
-    </section
+    </section>
+
+    <div>
+        <h2>shirts</h2>
+        <img class="shirts" src="shirts/shirt1.jfif">
+        <img class="shirts" src="shirts/shirt2.jfif">
+        <img class="shirts" src="shirts/shirt3.jfif">
+        <img class="shirts" src="shirts/shirt4.jfif">
+        <img class="shirts" src="shirts/shirt5.jfif">
+        <img class="shirts" src="shirts/shirt6.jfif">
+
+    </div>
+
      <div>
         <h2>About us</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab illo officiis fugiat qui quibusdam harum voluptates minima eligendi praesentium, explicabo a facilis commodi iste nemo nisi repudiandae minus accusantium nihil?</p>
