--- a/login.html
+++ b/login.html
@@ -29,6 +29,9 @@
     <br>
     <br>
     <button id="sign" onclick="sign()">sign in</button>
+    <br>
+    <br>
+    <button id="back" onclick="back()"><--back</button>
     </section>
     </div>
 </center>
@@ -74,6 +77,13 @@
     border: none;
     padding: 10px;
     width: 10%;
+}
+
+#back{
+    border-radius: 30px;
+    border: none;
+    padding: 20px; 
+    width: 30px;
 }
 
 </style>
