--- a/intex.html
+++ b/intex.html
@@ -25,7 +25,7 @@
 
     <div>
         <h2>shirts</h2>
-        <img class="shirts" src="shirts/shirt1.jfif"><button id="Add">Add</button>
+        <img class="shirts" src="shirts/shirt1.jfif">
         <button id="Add">Add</button>
         <img class="shirts" src="shirts/shirt2.jfif">
         <img class="shirts" src="shirts/shirt3.jfif">
