t shirt section added

--- a/intex.html
+++ b/intex.html
@@ -35,6 +35,16 @@
 
     </div>
 
+    <div>
+        <h2>T-shirts</h2>
+        <img src="shirts/tshirt.1.jfif">
+        <img src="shirts/tshirt.2.jfif">
+        <img src="shirts/tshirt.3.jfif">
+        <img src="shirts/tshirt.4.jfif">
+        <img src="shirts/tshirt.5.jfif">
+        <img src="shirts/tshirt.6.jfif">
+    </div>
+
      <div>
         <h2>About us</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab illo officiis fugiat qui quibusdam harum voluptates minima eligendi praesentium, explicabo a facilis commodi iste nemo nisi repudiandae minus accusantium nihil?</p>
